--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
-						<a href="https://linkedin.com/in/nathaniel-ortega-256673206"><i class="fab fa-linkedin"><span>LinkedIn</span></i></a>
+						<a href="https://linkedin.com/in/nathaniel-ortega-256673206"><i class="fab fa-linkedin"></i><span>LinkedIn</span></a>
 					</nav>
 
 				<!-- Main -->
