messing with html file

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>Nathaniel Ortega</h1>
-									<p>Full Stack Developer  |  Professional Cellist</p>
+									<p>Full Stack Developer</p>
+									<p>Professional Cellist</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
