--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
 						<a href="https://linkedin.com/in/nathaniel-ortega-256673206"><i class="fab fa-linkedin"></i><span>LinkedIn</span></a>
-						<a href="https://github.com/Natejo91"><i class="fab fa-github"></i><span>Github</span></a>
+						<a href="https://github.com/Natejo91"><i class="fab fa-github"></i><span>GitHub</span></a>
 					</nav>
 
 				<!-- Main -->
