--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li>&copy; <strong>Nathaniel Ortega</strong> All Rights Reserved</li><li>Design: Created with <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; <em>Nathaniel Ortega</em> All Rights Reserved</li><li>Design: Created with <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
 
