--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
-						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
+						<a href="#work" class="icon solid fa-folder"><span>Projects</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
 						<a href="https://linkedin.com/in/nathaniel-ortega-256673206"><i class="fab fa-linkedin"></i><span>LinkedIn</span></a>
 						<a href="https://github.com/Natejo91"><i class="fab fa-github"></i><span>GitHub</span></a>
@@ -45,12 +45,10 @@
 						<!-- Work -->
 							<article id="work" class="panel">
 								<header>
-									<h2>Work</h2>
+									<h2>Projects</h2>
 								</header>
 								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
+									Current and past projects that I am currently working on or have completed
 								</p>
 								<section>
 									<div class="row">
