--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 								<header>
 									<h2>Projects</h2>
 								</header>
-								<h3>
+								<h3 id="projects_h3">
 									Current and past projects that I am currently working on or have completed
 								</h3>
 								<section>
