--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 									<h2>Projects</h2>
 								</header>
 								<h3 id="projects_h3">
-									Current and past projects that I am currently working on or have completed
+									Projects that I am currently working on or have completed
 								</h3>
 								<section>
 									<div class="row">
