editing projects page

--- a/index.html
+++ b/index.html
@@ -45,20 +45,22 @@
 						<!-- Work -->
 							<article id="work" class="panel">
 								<header>
-									<h2>Projects</h2>
+									<h2 id="projects_h3">
+										Projects that I am currently working on or have completed
+									</h2>
 								</header>
-								<h3 id="projects_h3">
-									Projects that I am currently working on or have completed
-								</h3>
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
+											<h3>GitGud</h3>
 											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
+											<h3>AirStage</h3>
 											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
+											<h3>disChord</h3>
 											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
