--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<article id="work" class="panel">
 								<header>
 									<h2 id="projects_h3">
-										Projects that I am currently working on or have completed
+										Projects that I am currently working on
 									</h2>
 								</header>
 								<section>
@@ -60,7 +60,7 @@
 											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<h3>disChord</h3>
+											<h3>DisChord</h3>
 											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
