--- a/index.html
+++ b/index.html
@@ -61,9 +61,19 @@
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
 										</div>
+									</div>
+								</section>
+								<section>
+									<h3>AirStage</h3>
+									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<h3>AirStage</h3>
 											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
 										</div>
 									</div>
 								</section>
