--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 									<h3>GitGud</h3>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+											<a href="https://gitgud-app.herokuapp.com/users/login" class="image fit"><img src="images/pic01.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
+											<a href="https://gitgud-app.herokuapp.com/users/login" class="image fit"><img src="images/pic02.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
+											<a href="https://gitgud-app.herokuapp.com/users/login" class="image fit"><img src="images/pic03.jpg" alt=""></a>
 										</div>
 									</div>
 								</section>
