--- a/index.html
+++ b/index.html
@@ -77,6 +77,21 @@
 										</div>
 									</div>
 								</section>
+								<section>
+									<h3>DisChord</h3>
+									<p>Currently being worked on</p>
+									<!-- <div class="row">
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
+										</div>
+									</div> -->
+								</section>
 							</article>
 
 						<!-- Contact -->
