--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								</header>
 								<section>
 									<h3>GitGud</h3>
-									<p>The app is a question-and-answer website for all things gaming. <br>Users can post questions for other users to respond to, share tips and tricks, <br>and discuss topics related to gaming. Users can register and login or use the demo account. <br>When logged in, users can search for anything in the search bar, search for posts associated with pre-defined topics,<br> as well as create a post or comment. Users can also edit their profile information.</p>
+									<p>The app is a question-and-answer website for all things gaming. Users can post questions<br> for other users to respond to, share tips and tricks, and discuss topics related to gaming. <br>Users can register and login or use the demo account. When logged in, users can search for anything <br>in the search bar, search for posts associated with pre-defined topics,<br> as well as create a post or comment. Users can also edit their profile information.</p>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://gitgud-app.herokuapp.com/users/login" class="image fit"><img src="images/pic01.jpg" alt=""></a>
