commented out more stuff to use later

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 									</div>
 								</section>
 								<section>
-									<h3>DisChord</h3>
-									<p>Currently being worked on</p>
+									<h3></h3>
+									<!-- <p>Currently being worked on</p> -->
 									<!-- <div class="row">
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
