--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 											<a href="https://air-stage.herokuapp.com/login" class="image fit"><img src="images/pic06.jpg" alt=""></a>
 										</div>
 									</div>
-									<p>AirStage is a website that allows musicians to pick and choose different homes to perform<br> concerts in depending on location. Musicians should be able to view a list of Venues while <br>on the home page. The website will also use a google api to determine where the musician is located and populate the list of venues accordingly. There will also be a search function <br>that will allow musicians to search for a venue depending on location. The venues themselves will have a picture and<br> details about the space and will also have reviews on them by other musicians.</p>
+									<p>AirStage is a website that allows musicians to pick and choose different homes to perform<br> concerts in depending on location. Musicians should be able to view a list of Venues while <br>on the home page. The website will also use a google api to determine where the musician is located and populate the list of venues accordingly. There will also be a search function <br>that will allow musicians to search for a venue depending on location. The venues themselves<br> will have a picture and details about the space and will also have reviews on them by other musicians.</p>
 								</section>
 								<section>
 									<h3></h3>
