--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 									</h2>
 								</header>
 								<section>
-									<h3>GitGud</h3>
+									<h3>GitGud, a Quora clone</h3>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://gitgud-app.herokuapp.com/users/login" class="image fit"><img src="images/pic01.jpg" alt=""></a>
@@ -65,7 +65,7 @@
 									<p>The app is a question-and-answer website for all things gaming. Users can post questions<br> for other users to respond to, share tips and tricks, and discuss topics related to gaming. <br>Users can register and login or use the demo account. When logged in, users can search for anything in the search bar, search for posts associated with pre-defined topics,<br> as well as create a post or comment. Users can also edit their profile information.</p>
 								</section>
 								<section>
-									<h3>AirStage</h3>
+									<h3>AirStage, an AirBnb clone</h3>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://air-stage.herokuapp.com/login" class="image fit"><img src="images/pic04.jpg" alt=""></a>
