added css for p

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 											<a href="https://gitgud-app.herokuapp.com/users/login" class="image fit"><img src="images/pic03.jpg" alt=""></a>
 										</div>
 									</div>
-									<p>The app is a question-and-answer website for all things gaming. Users can post questions<br> for other users to respond to, share tips and tricks, and discuss topics related to gaming. <br>Users can register and login or use the demo account. When logged in, users can search for anything in the search bar, search for posts associated with pre-defined topics,<br> as well as create a post or comment. Users can also edit their profile information.</p>
+									<p class="project_description">The app is a question-and-answer website for all things gaming. Users can post questions<br> for other users to respond to, share tips and tricks, and discuss topics related to gaming. <br>Users can register and login or use the demo account. When logged in, users can search for anything in the search bar, search for posts associated with pre-defined topics,<br> as well as create a post or comment. Users can also edit their profile information.</p>
 								</section>
 								<section>
 									<h3>AirStage, an AirBnb clone</h3>
@@ -77,7 +77,7 @@
 											<a href="https://air-stage.herokuapp.com/login" class="image fit"><img src="images/pic06.jpg" alt=""></a>
 										</div>
 									</div>
-									<p>AirStage is a website that allows musicians to pick and choose different homes to perform<br> concerts in depending on location. Musicians should be able to view a list of Venues while <br>on the home page. The website will also use a google api to determine where the musician is located and populate the list of venues accordingly. There will also be a search function <br>that will allow musicians to search for a venue depending on location. The venues themselves<br> will have a picture and details about the space and will also have reviews on them by other musicians.</p>
+									<p class="project_description">AirStage is a website that allows musicians to pick and choose different homes to perform<br> concerts in depending on location. Musicians should be able to view a list of Venues while <br>on the home page. The website will also use a google api to determine where the musician is located and populate the list of venues accordingly. There will also be a search function <br>that will allow musicians to search for a venue depending on location. The venues themselves<br> will have a picture and details about the space and will also have reviews on them by other musicians.</p>
 								</section>
 								<section>
 									<h3></h3>
