--- a/index.html
+++ b/index.html
@@ -46,53 +46,76 @@
 							<article id="work" class="panel">
 								<header>
 									<h2 id="projects_h3">
-										Projects that I am currently working on
+										Projects
 									</h2>
 								</header>
 								<section>
-									<h3 id="gitgud_title">GitGud, a Quora clone</h3>
+									<h3 id="AdoptaPet_title">Adopt-a-Pet</h3>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://gitgud-app.herokuapp.com/users/login" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+											<a href="https://adopt-a-pet-app.herokuapp.com/" class="image fit"><img src="images/pic07.PNG" alt="Adopt-a-Pet Homepage"></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://gitgud-app.herokuapp.com/users/login" class="image fit"><img src="images/pic02.jpg" alt=""></a>
+											<a href="https://adopt-a-pet-app.herokuapp.com/" class="image fit"><img src="images/pic08.PNG" alt="Adopt-a-Pet Shelter Page"></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://gitgud-app.herokuapp.com/users/login" class="image fit"><img src="images/pic03.jpg" alt=""></a>
+											<a href="https://adopt-a-pet-app.herokuapp.com/" class="image fit"><img src="images/pic09.PNG" alt="Adopt-a-pet Animal Page"></a>
+										</div>
+										<div class="description-container">
+											<p id="project_description_adoptapet">Adopt-a-Pet is a clone of the popular PetFinder website which connects users to animals from animal shelters all over the United States. Adopt-a-Pet utilizes 4 different API's to make the website realistic as it is using real animals and animal shelters from PetFinders API. Google Maps API brings everything together as it displays where the animal shelters are located using markers and Info Windows. Favoriting animals is another feature that allows you to favorite animals with a heart icon which allows you to view them then on the favorite animal page. This project utilizes <strong>React / Redux, Python, Flask, SQLAlchemy, JavaScript, and CSS.</strong></p>
 										</div>
 									</div>
-									<p id="project_description_gitgud">The app is a question-and-answer website for all things gaming. Users can post questions<br> for other users to respond to, share tips and tricks, and discuss topics related to gaming. <br>Users can register and login or use the demo account. When logged in, users can search for anything in the search bar, search for posts associated with pre-defined topics,<br> as well as create a post or comment. Users can also edit their profile information.</p>
 								</section>
 								<section>
-									<h3 id="airstage_title">AirStage, an AirBnb clone</h3>
+									<h3 id="Bazaar_title">Bazaar</h3>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://air-stage.herokuapp.com/login" class="image fit"><img src="images/pic04.jpg" alt=""></a>
+											<a href="https://bazaar-aa.herokuapp.com/" class="image fit"><img src="images/pic10.PNG" alt="Bazaar Homepage"></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://air-stage.herokuapp.com/login" class="image fit"><img src="images/pic05.jpg" alt=""></a>
+											<a href="https://bazaar-aa.herokuapp.com/" class="image fit"><img src="images/pic11.PNG" alt="Bazaar Product Page"></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://air-stage.herokuapp.com/login" class="image fit"><img src="images/pic06.jpg" alt=""></a>
+											<a href="https://bazaar-aa.herokuapp.com/" class="image fit"><img src="images/pic12.PNG" alt="Bazaar Cart Page"></a>
+										</div>
+										<div>
+											<p></p>
 										</div>
 									</div>
-									<p id="project_description_airstage">AirStage is a website that allows musicians to pick and choose different homes to perform<br> concerts in depending on location. Musicians should be able to view a list of Venues while <br>on the home page. The website will also use a google api to determine where the musician is located and populate the list of venues accordingly. There will also be a search function <br>that will allow musicians to search for a venue depending on location. The venues themselves<br> will have a picture and details about the space and will also have reviews on them by other musicians.</p>
 								</section>
 								<section>
-									<h3></h3>
-									<!-- <p>Currently being worked on</p> -->
-									<!-- <div class="row">
+									<h3 id="gitgud_title">GitGud</h3>
+									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
+											<a href="https://gitgud-app.herokuapp.com/users/login" class="image fit"><img src="images/pic01.jpg" alt="GitGud Homepage"></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
+											<a href="https://gitgud-app.herokuapp.com/users/login" class="image fit"><img src="images/pic02.jpg" alt="GitGud Topics Page"></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
+											<a href="https://gitgud-app.herokuapp.com/users/login" class="image fit"><img src="images/pic03.jpg" alt="GitGud Post Page"></a>
 										</div>
-									</div> -->
+									</div>
+									<div class="description-container">
+										<p id="project_description_gitgud">The app is a question-and-answer website for all things gaming. Users can post questions<br> for other users to respond to, share tips and tricks, and discuss topics related to gaming. <br>Users can register and login or use the demo account. When logged in, users can search for anything in the search bar, search for posts associated with pre-defined topics,<br> as well as create a post or comment. Users can also edit their profile information. <br> This project utilizes <strong>JavaScript, Express, Sequelize, Pug, HTML, and CSS.</strong></p>
+									</div>
+								</section>
+								<section>
+									<h3 id="airstage_title">AirStage</h3>
+									<div class="row">
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="https://air-stage.herokuapp.com/login" class="image fit"><img src="images/pic04.jpg" alt="AirStage HomePage"></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="https://air-stage.herokuapp.com/login" class="image fit"><img src="images/pic05.jpg" alt="AirStage Venue Page"></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="https://air-stage.herokuapp.com/login" class="image fit"><img src="images/pic06.jpg" alt="AirStage Venues"></a>
+										</div>
+									</div>
+									<div class="description-container">
+										<p id="project_description_airstage">AirStage is a website that allows musicians to pick and choose different homes to perform<br> concerts in depending on location. Musicians should be able to view a list of Venues while <br>on the home page. The website will also use a google api to determine where the musician is located and populate the list of venues accordingly. There will also be a search function <br>that will allow musicians to search for a venue depending on location. The venues themselves<br> will have a picture and details about the space and will also have reviews on them by other musicians. This project utilizes <strong>JavaScript, React / Redux, Express, Sequelize, HTML, and CSS.</strong></p>
+									</div>
 								</section>
 							</article>
 
