made it so links open in seperate tab

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
 				<!-- Nav -->
 					<nav id="nav">
-						<a href="#" class="icon solid fa-home"><span>Home</span></a>
-						<a href="#work" class="icon solid fa-folder"><span>Projects</span></a>
+						<a href="#home" class="icon solid fa-home"><span>Home</span></a>
+						<a href="#projects" class="icon solid fa-folder"><span>Projects</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
-						<a href="https://linkedin.com/in/nathaniel-ortega-256673206"><i class="fab fa-linkedin"></i><span>LinkedIn</span></a>
-						<a href="https://github.com/Natejo91"><i class="fab fa-github"></i><span>GitHub</span></a>
+						<a href="https://linkedin.com/in/nathaniel-ortega-256673206" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i><span>LinkedIn</span></a>
+						<a href="https://github.com/Natejo91" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i><span>GitHub</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -36,14 +36,14 @@
 									<h1>Nathaniel Ortega</h1>
 									<p>Full Stack Developer</p>
 								</header>
-								<a href="#work" class="jumplink pic">
-									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-									<img src="images/me.jpg" alt="" />
+								<a href="#projects" class="jumplink pic">
+									<span class="arrow icon solid fa-chevron-right"></span>
+									<img src="images/me.jpg" alt="Nathaniel Profile Picture" />
 								</a>
 							</article>
 
 						<!-- Work -->
-							<article id="work" class="panel">
+							<article id="projects" class="panel">
 								<header>
 									<h2 id="projects_h3">
 										Projects
@@ -53,16 +53,16 @@
 									<h3 id="AdoptaPet_title">Adopt-a-Pet</h3>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://adopt-a-pet-app.herokuapp.com/" class="image fit"><img src="images/pic07.PNG" alt="Adopt-a-Pet Homepage"></a>
+											<a href="https://adopt-a-pet-app.herokuapp.com/" class="image fit" target="_blank" rel="noopener noreferrer"><img src="images/pic07.PNG" alt="Adopt-a-Pet Homepage"></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://adopt-a-pet-app.herokuapp.com/" class="image fit"><img src="images/pic08.PNG" alt="Adopt-a-Pet Shelter Page"></a>
+											<a href="https://adopt-a-pet-app.herokuapp.com/" class="image fit" target="_blank" rel="noopener noreferrer"><img src="images/pic08.PNG" alt="Adopt-a-Pet Shelter Page"></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://adopt-a-pet-app.herokuapp.com/" class="image fit"><img src="images/pic09.PNG" alt="Adopt-a-pet Animal Page"></a>
+											<a href="https://adopt-a-pet-app.herokuapp.com/" class="image fit" target="_blank" rel="noopener noreferrer"><img src="images/pic09.PNG" alt="Adopt-a-pet Animal Page"></a>
 										</div>
 										<div class="description-container">
-											<p id="project_description_adoptapet">Adopt-a-Pet is a clone of the popular PetFinder website which connects users to animals from animal shelters all over the United States. Adopt-a-Pet utilizes 4 different API's to make the website realistic as it is using real animals and animal shelters from PetFinders API. Google Maps API brings everything together as it displays where the animal shelters are located using markers and Info Windows. Favoriting animals is another feature that allows you to favorite animals with a heart icon which allows you to view them then on the favorite animal page. This project utilizes <strong>React / Redux, Python, Flask, SQLAlchemy, JavaScript, and CSS.</strong></p>
+											<p id="project_description_adoptapet">Adopt-a-Pet is a clone of the popular PetFinder website which connects users to animals from animal shelters all over the United States. Adopt-a-Pet utilizes 4 different API's to make the website realistic as it is using real animals and animal shelters from PetFinders API. Google Maps API brings everything together as it displays where the animal shelters are located using markers and Info Windows. Favoriting animals is another feature that allows you to favorite animals with a heart icon which then allows you to view them on the favorite animal page. This project utilizes <strong>React / Redux, Python, Flask, SQLAlchemy, JavaScript, and CSS.</strong></p>
 										</div>
 									</div>
 								</section>
@@ -97,7 +97,7 @@
 										</div>
 									</div>
 									<div class="description-container">
-										<p id="project_description_gitgud">The app is a question-and-answer website for all things gaming. Users can post questions<br> for other users to respond to, share tips and tricks, and discuss topics related to gaming. <br>Users can register and login or use the demo account. When logged in, users can search for anything in the search bar, search for posts associated with pre-defined topics,<br> as well as create a post or comment. Users can also edit their profile information. <br> This project utilizes <strong>JavaScript, Express, Sequelize, Pug, HTML, and CSS.</strong></p>
+										<p id="project_description_gitgud">The app is a question-and-answer website for all things gaming. Users can post questions for other users to respond to, share tips and tricks, and discuss topics related to gaming. Users can register and login or use the demo account. When logged in, users can search for anything in the search bar, search for posts associated with pre-defined topics, as well as create a post or comment. Users can also edit their profile information. This project utilizes <strong>JavaScript, Express, Sequelize, Pug, PostgreSQL, HTML, and CSS.</strong></p>
 									</div>
 								</section>
 								<section>
@@ -114,7 +114,7 @@
 										</div>
 									</div>
 									<div class="description-container">
-										<p id="project_description_airstage">AirStage is a website that allows musicians to pick and choose different homes to perform<br> concerts in depending on location. Musicians should be able to view a list of Venues while <br>on the home page. The website will also use a google api to determine where the musician is located and populate the list of venues accordingly. There will also be a search function <br>that will allow musicians to search for a venue depending on location. The venues themselves<br> will have a picture and details about the space and will also have reviews on them by other musicians. This project utilizes <strong>JavaScript, React / Redux, Express, Sequelize, HTML, and CSS.</strong></p>
+										<p id="project_description_airstage">AirStage is a website that allows musicians to pick and choose different homes to perform concerts in depending on location. Musicians should be able to view a list of Venues while on the home page. The website will also use a google api to determine where the musician is located and populate the list of venues accordingly. There will also be a search function that will allow musicians to search for a venue depending on location. The venues themselves will have a picture and details about the space and will also have reviews on them by other musicians. This project utilizes <strong>JavaScript, React / Redux, Express, Sequelize, PostgreSQL, HTML, and CSS.</strong></p>
 									</div>
 								</section>
 							</article>
