added last two projects

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 									</h2>
 								</header>
 								<section>
-									<h3 id="AdoptaPet_title">Adopt-a-Pet</h3>
+									<h3 id="AdoptaPet_title"><em>Adopt-a-Pet</em></h3>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://adopt-a-pet-app.herokuapp.com/" class="image fit" target="_blank" rel="noopener noreferrer"><img src="images/pic07.PNG" alt="Adopt-a-Pet Homepage"></a>
@@ -67,7 +67,7 @@
 									</div>
 								</section>
 								<section>
-									<h3 id="Bazaar_title">Bazaar</h3>
+									<h3 id="bazaar_title"><em>Bazaar</em></h3>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://bazaar-aa.herokuapp.com/" class="image fit"><img src="images/pic10.PNG" alt="Bazaar Homepage"></a>
@@ -78,13 +78,13 @@
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://bazaar-aa.herokuapp.com/" class="image fit"><img src="images/pic12.PNG" alt="Bazaar Cart Page"></a>
 										</div>
-										<div>
-											<p></p>
+										<div class="description-container">
+											<p id="project_description_bazaar">Bazaar is an online marketplace and a clone of Etsy. Upon coming to the splash page you will see a list of products that are pulled directly from Etsy's API with dynamic seeders. Using real information from Etsy's API gives the website a realistic feel and allows for real information to be displayed on Bazaar. After browsing through products you can add products to your cart and eventually check out and complete your order. As a user you are also allow to create your own store so that you can upload products to the store as an owner. Amazon Web Services is used to allow users to upload product photos and store photos. This project utilizes <strong>React / Redux, Python, Flask, SQLAlchemy, JavaScript, and CSS.</strong></p>
 										</div>
 									</div>
 								</section>
 								<section>
-									<h3 id="gitgud_title">GitGud</h3>
+									<h3 id="gitgud_title"><em>GitGud</em></h3>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://gitgud-app.herokuapp.com/users/login" class="image fit"><img src="images/pic01.jpg" alt="GitGud Homepage"></a>
@@ -101,7 +101,7 @@
 									</div>
 								</section>
 								<section>
-									<h3 id="airstage_title">AirStage</h3>
+									<h3 id="airstage_title"><em>AirStage</em></h3>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://air-stage.herokuapp.com/login" class="image fit"><img src="images/pic04.jpg" alt="AirStage HomePage"></a>
