--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 									<h1>About me!</h1>
 								</header>
 								<section>
-									<p>My name is Nathaniel Ortega and I am a software developer and professional cellist. I have experience developing web applications that utlize React / Redux, JavaScript, Python, Flask, SQLAlchemy, Express, Sequelize, PostgreSQL, HTML, and CSS. Check out my projects <a href="#projects"><em>here</em></a> which showcase all of these skills. I am constantly learning and adding new languages to my skillset.</p>
+									<p>My name is Nathaniel Ortega and I am a software developer and professional cellist. I have experience developing web applications that utlize React / Redux, JavaScript, Python, Flask, SQLAlchemy, Express, Sequelize, PostgreSQL, HTML, and CSS. Check out my projects <a href="#projects"><em>HERE</em></a> which showcase all of these skills. I am constantly learning and adding new languages to my skillset.</p>
 									<p>I have played cello for more than two decades and I am an accomplished chamber musician who has performed throughout the world as an artist for Lincoln Center Stage onboard Holland America Line cruise ships. In my free time I like to collect vinyl records and also love to teach and play tennis.</p>
 								</section>
 								<h2>Skills</h2>
